<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_330dp"
    android:layout_marginHorizontal="@dimen/_20dp"
    android:background="@drawable/leaderdailog_bg"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="42sp"
        android:layout_height="42sp"
        android:layout_gravity="end"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/closebtn" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18dp"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/str_dailogtv1"
        android:textColor="@color/white"
        android:textSize="@dimen/_18dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/str_dailogtv2"
        android:textColor="@color/white"
        android:textSize="@dimen/_18dp" />

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="@dimen/_25dp"
        android:background="@drawable/sellang">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/str_continue"
            android:textColor="@color/black"
            android:textSize="@dimen/_18dp"
            android:textStyle="bold" />
    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>
</com.google.android.material.circularreveal.CircularRevealLinearLayout>